@@ -1,7 +1,7 @@
 #!/bin/sh
 MAJOR=2
 MINOR=6
-REV=4a4
+REV=4a5
 #sh -c "svnversion -n . | cut -d: -f2 | cut -dS -f1 | tr -d '\n'" > ./SVN_VERSION
 #SVN_VERSION=`cat ./SVN_VERSION`
 #VERSION="$MAJOR.$MINOR.$REV-svn$SVN_VERSION"
