@@ -35,6 +35,31 @@
 #include <BackEnd.h>
 #include "TDBSCANWorkerOffline.h"
 
+#if defined(BACKEND_ATTACH)
+
+#include <mpi.h>
+
+int main(int argc, char *argv[])
+{
+   int rank;
+
+   MPI_Init(&argc, &argv);
+   MPI_Comm_rank(MPI_COMM_WORLD, &rank);
+
+   BackEnd *BE = new BackEnd();
+   BE->Init(rank);
+
+   BackProtocol *protClustering = new TDBSCANWorkerOffline();
+   BE->LoadProtocol( protClustering );
+
+   BE->Loop();
+
+   MPI_Finalize();
+   return 0;
+}
+
+#else
+
 /**
  * The back-end application loads the TDBSCAN protocol and waits for 
  * the front-end to start the analysis.
@@ -54,4 +79,6 @@ int main(int argc, char *argv[])
 
    return 0;
 }
+
+#endif
 
