@@ -1,3 +1,3 @@
 #!/bin/bash
 
-python @sub_PREFIX@/bin/tdbscan-launcher.py $*
+python @sub_PREFIX@/bin/tdbscan-launcher.py 0 $*
